@@ -16,16 +16,20 @@
  */
 package org.apache.dubbo.common.logger;
 
-import org.apache.dubbo.common.extension.ExtensionLoader;
 import org.apache.dubbo.common.logger.jcl.JclLoggerAdapter;
 import org.apache.dubbo.common.logger.jdk.JdkLoggerAdapter;
 import org.apache.dubbo.common.logger.log4j.Log4jLoggerAdapter;
 import org.apache.dubbo.common.logger.log4j2.Log4j2LoggerAdapter;
 import org.apache.dubbo.common.logger.slf4j.Slf4jLoggerAdapter;
+import org.apache.dubbo.common.logger.support.FailsafeErrorTypeAwareLogger;
 import org.apache.dubbo.common.logger.support.FailsafeLogger;
+import org.apache.dubbo.common.utils.ConcurrentHashMapUtils;
+import org.apache.dubbo.rpc.model.FrameworkModel;
 
 import java.io.File;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -37,41 +41,73 @@ import java.util.concurrent.ConcurrentMap;
 public class LoggerFactory {
 
     private static final ConcurrentMap<String, FailsafeLogger> LOGGERS = new ConcurrentHashMap<>();
-    private static volatile LoggerAdapter LOGGER_ADAPTER;
+    private static final ConcurrentMap<String, FailsafeErrorTypeAwareLogger> ERROR_TYPE_AWARE_LOGGERS = new ConcurrentHashMap<>();
+    private static volatile LoggerAdapter loggerAdapter;
 
     // search common-used logging frameworks
     static {
         String logger = System.getProperty("dubbo.application.logger", "");
         switch (logger) {
-            case "slf4j":
+            case Slf4jLoggerAdapter.NAME:
                 setLoggerAdapter(new Slf4jLoggerAdapter());
                 break;
-            case "jcl":
+            case JclLoggerAdapter.NAME:
                 setLoggerAdapter(new JclLoggerAdapter());
                 break;
-            case "log4j":
+            case Log4jLoggerAdapter.NAME:
                 setLoggerAdapter(new Log4jLoggerAdapter());
                 break;
-            case "jdk":
+            case JdkLoggerAdapter.NAME:
                 setLoggerAdapter(new JdkLoggerAdapter());
                 break;
-            case "log4j2":
+            case Log4j2LoggerAdapter.NAME:
                 setLoggerAdapter(new Log4j2LoggerAdapter());
                 break;
             default:
                 List<Class<? extends LoggerAdapter>> candidates = Arrays.asList(
-                        Log4jLoggerAdapter.class,
-                        Slf4jLoggerAdapter.class,
-                        Log4j2LoggerAdapter.class,
-                        JclLoggerAdapter.class,
-                        JdkLoggerAdapter.class
+                    Log4jLoggerAdapter.class,
+                    Slf4jLoggerAdapter.class,
+                    Log4j2LoggerAdapter.class,
+                    JclLoggerAdapter.class,
+                    JdkLoggerAdapter.class
                 );
+                boolean found = false;
+                // try to use the first available adapter
                 for (Class<? extends LoggerAdapter> clazz : candidates) {
                     try {
-                        setLoggerAdapter(clazz.newInstance());
+                        LoggerAdapter loggerAdapter = clazz.getConstructor().newInstance();
+                        loggerAdapter.getLogger(LoggerFactory.class);
+                        if (loggerAdapter.isConfigured()) {
+                            setLoggerAdapter(loggerAdapter);
+                            found = true;
+                            break;
+                        }
+                    } catch (Exception | LinkageError ignored) {
+                        // ignore
+                    }
+                }
+                if (found) {
+                    break;
+                }
+
+                System.err.println("Dubbo: Unable to find a proper configured logger to log out.");
+                for (Class<? extends LoggerAdapter> clazz : candidates) {
+                    try {
+                        LoggerAdapter loggerAdapter = clazz.getConstructor().newInstance();
+                        loggerAdapter.getLogger(LoggerFactory.class);
+                        setLoggerAdapter(loggerAdapter);
+                        found = true;
                         break;
                     } catch (Throwable ignored) {
+                        // ignore
                     }
+                }
+                if (found) {
+                    System.err.println("Dubbo: Using default logger: " + loggerAdapter.getClass().getName() + ". " +
+                        "If you cannot see any log, please configure -Ddubbo.application.logger property to your preferred logging framework.");
+                } else {
+                    System.err.println("Dubbo: Unable to find any available logger adapter to log out. Dubbo logs will be ignored. " +
+                        "Please configure -Ddubbo.application.logger property and add corresponding logging library to classpath.");
                 }
         }
     }
@@ -79,9 +115,9 @@ public class LoggerFactory {
     private LoggerFactory() {
     }
 
-    public static void setLoggerAdapter(String loggerAdapter) {
+    public static void setLoggerAdapter(FrameworkModel frameworkModel, String loggerAdapter) {
         if (loggerAdapter != null && loggerAdapter.length() > 0) {
-            setLoggerAdapter(ExtensionLoader.getExtensionLoader(LoggerAdapter.class).getExtension(loggerAdapter));
+            setLoggerAdapter(frameworkModel.getExtensionLoader(LoggerAdapter.class).getExtension(loggerAdapter));
         }
     }
 
@@ -92,11 +128,13 @@ public class LoggerFactory {
      */
     public static void setLoggerAdapter(LoggerAdapter loggerAdapter) {
         if (loggerAdapter != null) {
-            Logger logger = loggerAdapter.getLogger(LoggerFactory.class.getName());
-            logger.info("using logger: " + loggerAdapter.getClass().getName());
-            LoggerFactory.LOGGER_ADAPTER = loggerAdapter;
+            if (loggerAdapter == LoggerFactory.loggerAdapter) {
+                return;
+            }
+            loggerAdapter.getLogger(LoggerFactory.class.getName());
+            LoggerFactory.loggerAdapter = loggerAdapter;
             for (Map.Entry<String, FailsafeLogger> entry : LOGGERS.entrySet()) {
-                entry.getValue().setLogger(LOGGER_ADAPTER.getLogger(entry.getKey()));
+                entry.getValue().setLogger(LoggerFactory.loggerAdapter.getLogger(entry.getKey()));
             }
         }
     }
@@ -108,7 +146,7 @@ public class LoggerFactory {
      * @return logger
      */
     public static Logger getLogger(Class<?> key) {
-        return LOGGERS.computeIfAbsent(key.getName(), name -> new FailsafeLogger(LOGGER_ADAPTER.getLogger(name)));
+        return ConcurrentHashMapUtils.computeIfAbsent(LOGGERS, key.getName(), name -> new FailsafeLogger(loggerAdapter.getLogger(name)));
     }
 
     /**
@@ -118,7 +156,27 @@ public class LoggerFactory {
      * @return logger provider
      */
     public static Logger getLogger(String key) {
-        return LOGGERS.computeIfAbsent(key, k -> new FailsafeLogger(LOGGER_ADAPTER.getLogger(k)));
+        return ConcurrentHashMapUtils.computeIfAbsent(LOGGERS, key, k -> new FailsafeLogger(loggerAdapter.getLogger(k)));
+    }
+
+    /**
+     * Get error type aware logger by Class object.
+     *
+     * @param key the returned logger will be named after clazz
+     * @return error type aware logger
+     */
+    public static ErrorTypeAwareLogger getErrorTypeAwareLogger(Class<?> key) {
+        return ConcurrentHashMapUtils.computeIfAbsent(ERROR_TYPE_AWARE_LOGGERS, key.getName(), name -> new FailsafeErrorTypeAwareLogger(loggerAdapter.getLogger(name)));
+    }
+
+    /**
+     * Get error type aware logger by a String key.
+     *
+     * @param key the returned logger will be named after key
+     * @return error type aware logger
+     */
+    public static ErrorTypeAwareLogger getErrorTypeAwareLogger(String key) {
+        return ConcurrentHashMapUtils.computeIfAbsent(ERROR_TYPE_AWARE_LOGGERS, key, k -> new FailsafeErrorTypeAwareLogger(loggerAdapter.getLogger(k)));
     }
 
     /**
@@ -127,7 +185,7 @@ public class LoggerFactory {
      * @return logging level
      */
     public static Level getLevel() {
-        return LOGGER_ADAPTER.getLevel();
+        return loggerAdapter.getLevel();
     }
 
     /**
@@ -136,7 +194,7 @@ public class LoggerFactory {
      * @param level logging level
      */
     public static void setLevel(Level level) {
-        LOGGER_ADAPTER.setLevel(level);
+        loggerAdapter.setLevel(level);
     }
 
     /**
@@ -145,7 +203,52 @@ public class LoggerFactory {
      * @return current logging file
      */
     public static File getFile() {
-        return LOGGER_ADAPTER.getFile();
+        return loggerAdapter.getFile();
+    }
+
+    /**
+     * Get the available adapter names
+     *
+     * @return available adapter names
+     */
+    public static List<String> getAvailableAdapter() {
+        Map<Class<? extends LoggerAdapter>, String> candidates = new HashMap<>();
+        candidates.put(Log4jLoggerAdapter.class, "log4j");
+        candidates.put(Slf4jLoggerAdapter.class, "slf4j");
+        candidates.put(Log4j2LoggerAdapter.class, "log4j2");
+        candidates.put(JclLoggerAdapter.class, "jcl");
+        candidates.put(JdkLoggerAdapter.class, "jdk");
+        List<String> result = new LinkedList<>();
+        for (Map.Entry<Class<? extends LoggerAdapter>, String> entry : candidates.entrySet()) {
+            try {
+                LoggerAdapter loggerAdapter = entry.getKey().getConstructor().newInstance();
+                loggerAdapter.getLogger(LoggerFactory.class);
+                result.add(entry.getValue());
+            } catch (Exception ignored) {
+                // ignored
+            }
+        }
+        return result;
+    }
+
+    /**
+     * Get the current adapter name
+     *
+     * @return current adapter name
+     */
+    public static String getCurrentAdapter() {
+        Map<Class<? extends LoggerAdapter>, String> candidates = new HashMap<>();
+        candidates.put(Log4jLoggerAdapter.class, "log4j");
+        candidates.put(Slf4jLoggerAdapter.class, "slf4j");
+        candidates.put(Log4j2LoggerAdapter.class, "log4j2");
+        candidates.put(JclLoggerAdapter.class, "jcl");
+        candidates.put(JdkLoggerAdapter.class, "jdk");
+
+        String name = candidates.get(loggerAdapter.getClass());
+        if (name == null) {
+            name = loggerAdapter.getClass().getSimpleName();
+        }
+        return name;
     }
 
 }
